aggregation before send